fixed - displaying new lines and wrapping text on phone display

--- a/simulators/mchoice-simulator/src/main/resources/VAADIN/themes/simulator/styles.css
+++ b/simulators/mchoice-simulator/src/main/resources/VAADIN/themes/simulator/styles.css
@@ -37,7 +37,7 @@
     height: 112px;
     font-size:10px;
     line-height:11px;
-    white-space:normal;
+    white-space: pre-wrap;
     padding-right:21px;
 }
 
